--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    - name: build
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -23,13 +24,13 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: 1st test
         run: |
           echo Hello, world!
           echo Hello, konbankid world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: 2nd test
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
